<resources>
    <string name="app_name">AssignmentTest</string>


    <string name="login_btn_text">로그인</string>
    <string name="signup_btn_text">회원가입</string>


    <string name="login_text">로그인</string>
    <string name="signup_text">회원가입</string>
    <string name="guide_text">안녕하세요\n서비스 이용을 위해 로그인을 해주세요.</string>
    <string name="email_hint">이메일 주소</string>
    <string name="password_hint">영어+숫자+특수문자 조합 8~16자리</string>
    <string name="password_check_hint">비밀번호 확인</string>
    <string name="nickname_hint">닉네임</string>
    <string name="password_found">비밀번호 찾기</string>
    <string name="signup">회원가입</string>

    <string name="terms_text">서비스 이용약관에 동의해주세요.</string>
    <string name="checkbox_all_text">약관에 모두 동의</string>
    <string name="terms_one_text">[필수] 만 14세 이상</string>
    <string name="terms_two_text">[필수] 개인정보 수집 및 이용동의</string>

    <string name="login_explain_text">로그인이 필요한 서비스입니다.</string>

    <string name="complete_explain_text">닉네임님 환영합니다!</string>
    <string name="logout_btn_text">로그아웃</string>
    <string name="delete_account_btn_text">회원탈퇴</string>

    <string name="welcome_message">"%1$s님 환영합니다!"</string>
    <string name="logout_message">로그아웃 되었습니다.</string>
    <string name="delete_account_message">계정이 삭제되었습니다.</string>
    <string name="error_message">에러..</string>

    <string name="login_success_message">로그인 성공!</string>
    <string name="login_error_message">로그인 실패</string>
    <string name="login_loading_message">잠시만 기다려주세요..</string>

    <string name="signup_success_message">회원가입이 완료되었습니다!</string>
    <string name="signup_error_message">회원가입 실패</string>
    <string name="signup_loading_message">잠시만 기다려주세요..</string>
    <string name="signup_checkbox_not_checked_text">이용약관에 전부 동의해주세요.</string>

    <string name="email_flag_message">이메일 형식에 맞게 작성해주세요</string>
    <string name="password_flag_message">비밀번호는 영어,숫자,특수문자를 조합하여 8~16글자 이내로 입력해주세요</string>
    <string name="password_check_flag_message">비밀번호를 동일하게 입력해주세요.</string>
    <string name="nickname_flag_message">닉네임을 입력해주세요.</string>


</resources>