<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_yellow"
    tools:context=".CompleteFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"/>


    <ImageView
        android:id="@+id/smile_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/smile_img"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/complete_explain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_explain_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/smile_iv"
        app:layout_constraintStart_toStartOf="@+id/smile_iv"
        app:layout_constraintTop_toBottomOf="@+id/smile_iv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/auth_button_shape"
        android:text="@string/logout_btn_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/complete_explain_tv" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_account_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/auth_button_shape"
        android:text="@string/delete_account_btn_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/logout_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>